src/objects/Equipment__c.object
<CustomObject>
    <description>St. Jude Medcial Equipment</description>
    <fields>
        <fullName>Account_Name_VF__c</fullName>
        <formula>Account_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name VF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Equipment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account_Name__r.SJM_ID__c</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acquisition_Type__c</fullName>
        <label>Acquisition Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease / Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Add_Ons__c</fullName>
        <label>Add Ons</label>
        <picklist>
            <controllingField>Product_Category__c</controllingField>
            <picklistValues>
                <fullName>Contact Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verismo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derexi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP4 Stimulator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MicroPace Stimulator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bloom Stimulator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Image integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ultrasound control integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vitals monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurses notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recording</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Streaming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Clients</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHR__c</fullName>
        <externalId>true</externalId>
        <label>Device History Record</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_To_Warranty_Expiry__c</fullName>
        <description>Days To Warranty Expiry</description>
        <formula>IF(ISNULL(Warranty_End__c), &quot;N/A&quot;,
IF(Warranty_End__c - TODAY() &lt;= 0, &quot;Expired&quot;,
IF(Warranty_End__c - TODAY() &lt;= 30, &quot;30 days&quot;,
IF(Warranty_End__c - TODAY() &gt; 30 &amp;&amp; Warranty_End__c - TODAY() &lt;= 60, &quot;60 days&quot;,
IF(Warranty_End__c - TODAY() &gt; 60 &amp;&amp; Warranty_End__c - TODAY() &lt;= 90, &quot;90 days&quot;,
&quot;More than 90 Days&quot;

)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many days are left for Warranty Expiry</inlineHelpText>
        <label>Days To Warranty Expiry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detector_Size__c</fullName>
        <label>Detector Size</label>
        <picklist>
            <controllingField>Product_Category__c</controllingField>
            <picklistValues>
                <fullName>Small Square (20 cm x 20 cm)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Rectangle (20 cm x 30 cm)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Rectangle (30 cm x 40 cm)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Device_Count__c</fullName>
        <inlineHelpText>Device Count from SAP</inlineHelpText>
        <label>Device Count</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentOne__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EquipmentOne</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HMS_Other__c</fullName>
        <label>Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hemo_Monitoring_System__c</fullName>
        <label>Hemo Monitoring System</label>
        <picklist>
            <controllingField>Product_Category__c</controllingField>
            <picklistValues>
                <fullName>GE - Mac-Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens - Sensis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philips - Xper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McKesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mennon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IB_Component__c</fullName>
        <label>IB Component</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ibase_Product_Model__c</fullName>
        <label>Product Model</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_Product_ID__c</fullName>
        <label>Installed Product ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_Product_Name__c</fullName>
        <label>Material Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed__c</fullName>
        <label>Installed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LIST_PRICER__c</fullName>
        <formula>List_Price__c</formula>
        <label>LIST PRICE $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lab_Name_VF__c</fullName>
        <formula>Lab__c</formula>
        <label>Lab Name VF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lab</label>
        <referenceTo>Lab__c</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Data_Indicator__c</fullName>
        <label>Legacy Data Indicator</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Modified_By__c</fullName>
        <label>Legacy Modified By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Row_Id__c</fullName>
        <label>Legacy Row Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <label>Material Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <picklist>
            <controllingField>Product_Category__c</controllingField>
            <picklistValues>
                <fullName>ARTIS Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARTIS Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARTIS Q ZEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLURA FD10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLURA FD20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLURA FD10/10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLURA FD10/20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INNOVA 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INNOVA 3100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INNOVA 4100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INNOVA 20/20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IGS510</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IGS620</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mount__c</fullName>
        <label>Mount</label>
        <picklist>
            <controllingField>Product_Category__c</controllingField>
            <picklistValues>
                <fullName>Floor Mount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceiling Mount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oppty_Product_Model__c</fullName>
        <description>Opportunity Product Model</description>
        <inlineHelpText>Opportunity Product Model</inlineHelpText>
        <label>Oppty Product Model</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Flag__c</fullName>
        <formula>(IF(ISBLANK(Parent_Installbase__c), &apos;Y&apos;,&apos;N&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Installbase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Installbase</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>3D Mapping Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP Recording System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICE Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-Ray System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Screen HD Display System Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generator/Pump</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Model__c</fullName>
        <label>Product Model</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SJM_EQ_Record__c</fullName>
        <label>SJM EQ Record</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SJM_Owned__c</fullName>
        <label>SJM Owned</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Type__c</fullName>
        <label>Sale Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Lot_Number__c</fullName>
        <label>Serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Specialist__c</fullName>
        <description>Service Contract Specialist Name</description>
        <formula>Account_Name__r.Service_Contract_Specialist__r.FirstName &amp; &quot; &quot; &amp; Account_Name__r.Service_Contract_Specialist__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Service Contract Specialist Name</inlineHelpText>
        <label>Service Contract Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Version__c</fullName>
        <label>Software Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <controllingField>Product_Category__c</controllingField>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_ID__c</fullName>
        <inlineHelpText>Functional Location Number - FL#</inlineHelpText>
        <label>System ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Manufacturer__c</fullName>
        <label>System Manufacturer</label>
        <picklist>
            <controllingField>Product_Category__c</controllingField>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biosense Webster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Scientific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medtronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE/Prucka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Scientific/Bard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toshiba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens - MediGuide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stereotaxis/Biosense Webster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrot/Boston Scientific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>USD_AF_Area__c</fullName>
        <formula>Account_Name__r.USD_AF_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_AF_Division__c</fullName>
        <formula>Account_Name__r.USD_AF_Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USD AF Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_AF_Region__c</fullName>
        <description>USD AF Region</description>
        <formula>Account_Name__r.USD_AF_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>AF Region</inlineHelpText>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Accounting_Group__c</fullName>
        <label>USD Accounting Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Executive_Detail__c</fullName>
        <label>USD Executive Detail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Forecast_Level_2__c</fullName>
        <label>USD Forecast Level 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Manager_Detail__c</fullName>
        <label>USD Manager Detail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Product_Category__c</fullName>
        <label>USD Product Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Product_Family__c</fullName>
        <label>USD Product Family</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Product_Group_Name__c</fullName>
        <label>USD Product Group Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Product_Hierarchy_Level_2__c</fullName>
        <label>USD Product Hierarchy Level 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Product_Hierarchy_Level_3__c</fullName>
        <label>USD Product Hierarchy Level 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Product_Sub_Division__c</fullName>
        <label>USD Product Sub - Division</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Product_Type_Abbrev__c</fullName>
        <description>Changing the &quot;USD Product Type&quot; categories to the abbreviations</description>
        <formula>CASE(USD_Product_Type__c,
&quot;MAPPING AND VISUALIZ&quot;,&quot;MG&quot;,
&quot;HD DISPLAY&quot;,&quot;VV&quot;,
&quot;NAVIGATION AND GUIDA&quot;, &quot;AM&quot;,
&quot;INTRACARDIAC IMAGING&quot;, &quot;ICE&quot;,
&quot;RECORDING AND MONITO&quot;, &quot;CR&quot;,
USD_Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The &quot;USD Product Type&quot; categories are, 
1.	Mapping and Visualization to MG
2.	HD Displays to VV
3.	Navigation  and Guidance to AM
4.	Intracardiac Imaging to ICE
5.	Recording and Monitoring to CR</inlineHelpText>
        <label>USD Product Type Abbrev</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Product_Type__c</fullName>
        <label>USD Product Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Selling_Division__c</fullName>
        <label>USD Selling Division</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIS_Other__c</fullName>
        <label>Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Type__c</fullName>
        <label>Version/Type</label>
        <picklist>
            <controllingField>Product_Category__c</controllingField>
            <picklistValues>
                <fullName>EnSite Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EnSite Velocity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carto XP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carto 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rhythmia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Localisa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WorkMate Claris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WorkMate v4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WorkMate v3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CardioLab v6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CardioLab v5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LabPro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ViewMate (Zonare)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ViewMate (Philips CX-50)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acuson SC2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acuson X300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acuson CV70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acuson Cypress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acuson Sequoia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivid q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivid i</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galaxy / iLab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Plane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Pane</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty_End__c</fullName>
        <label>Warranty End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Expiration_Days__c</fullName>
        <formula>Warranty_End__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty Expiration Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Expired__c</fullName>
        <formula>$Label.Warranty_Expiration_Days = TEXT(Warranty_Expiration_Days__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty Expired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_Start__c</fullName>
        <label>Warranty Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Status__c</fullName>
        <label>Warranty Status</label>
        <picklist>
            <picklistValues>
                <fullName>Under Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Extended Service Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Covered/Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty_Type_Description__c</fullName>
        <formula>CASE( Warranty_Type__c ,&apos;OMW_PM&apos;, &apos;Original Manufacturer Warranty&apos;, &apos;OMW_PM_UPG&apos;,&apos;Assurance Plus Coverage&apos;, &apos;EXW_PM&apos;,&apos;Basic coverage&apos;, &apos;EXW_PM_UPGRADE&apos;, &apos;Assurance Plus Coverage&apos;, &apos;RENT_TERM&apos;, &apos;Rental Term&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty Type Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Type__c</fullName>
        <label>Warranty Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iBase_Product_Line_and_Model__c</fullName>
        <description>Concatenation of iBase Product Line and Model</description>
        <formula>Product_Line__c  &amp; &quot;  &quot; &amp; Ibase_Product_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>iBase Product Line and Model</label>
        <type>Text</type>
    </fields>
    <label>Equipment</label>
    <listViews>
        <fullName>All_Equipment</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Product_Category__c</columns>
        <columns>System_Manufacturer__c</columns>
        <columns>Warranty_End__c</columns>
        <columns>Days_To_Warranty_Expiry__c</columns>
        <columns>USD_AF_Region__c</columns>
        <columns>USD_AF_Area__c</columns>
        <columns>Lab__c</columns>
        <columns>Warranty_Expiration_Days__c</columns>
        <columns>Warranty_Expired__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Equipment</label>
    </listViews>
    <listViews>
        <fullName>All_SJM_Equipment</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Installed_Product_Name__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Software_Version__c</columns>
        <columns>System_Manufacturer__c</columns>
        <columns>Warranty_End__c</columns>
        <columns>Warranty_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Equipment__c.SJM_Capital</value>
        </filters>
        <label>All SJM Equipment</label>
    </listViews>
    <nameField>
        <displayFormat>EQ-{000000}</displayFormat>
        <label>Equipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <recordTypes>
        <fullName>Non_SJM</fullName>
        <active>true</active>
        <label>Non SJM</label>
    </recordTypes>
    <recordTypes>
        <fullName>SJM_Capital</fullName>
        <active>true</active>
        <description>SJM Capital Equipment derived from SAP</description>
        <label>SJM Capital</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>